force-app/main/default/objects/Soccer__c/Soccer__c.object-meta.xml
<CustomObject>
    <label>Soccer</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soccer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>