force-app/main/default/objects/Soccer__c/fields/Equipment_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name_2__c</fullName>
    <label>Equipment Name 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>