force-app/main/default/objects/Soccer__c/fields/Fecha_y_Hora__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora__c</fullName>
    <inlineHelpText>Fecha y hora del partido</inlineHelpText>
    <label>Fecha y Hora</label>
    <type>DateTime</type>
</CustomField>