force-app/main/default/objects/Soccer__c/fields/Goleadores_2__c.field-meta.xml
<CustomField>
    <fullName>Goleadores_2__c</fullName>
    <label>Goleadores 2</label>
    <type>TextArea</type>
</CustomField>