force-app/main/default/objects/Soccer__c/fields/Goleadores__c.field-meta.xml
<CustomField>
    <fullName>Goleadores__c</fullName>
    <label>Goleadores</label>
    <type>TextArea</type>
</CustomField>