force-app/main/default/objects/Soccer__c/fields/Resultado_2__c.field-meta.xml
<CustomField>
    <fullName>Resultado_2__c</fullName>
    <label>Resultado 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>